--- a/index.html
+++ b/index.html
@@ -105,12 +105,21 @@
             <ul class="works_list list">
                 <li class="works_item">
                     <img src="./img/box1.jpg" alt="Фото1_создание сайтов" width="370" height="294">
+                    <div class="work_text">
+                        <p >Десктопные приложения</p>
+                    </div>
                 </li>
                 <li class="works_item">
                     <img src="./img/box2.jpg" alt="Фото2_адаптивная верстка" width="370" height="294">
+                    <div class="work_text">
+                        <p>Мобильные приложения</p>
+                    </div>
                 </li>
                 <li class="works_item">
                     <img src="./img/box3.jpg" alt="Фото3_адаптивная графика" width="370" height="294">
+                    <div class="work_text">
+                        <p>Дизайнерские решения</p>
+                    </div>
                 </li>
             </ul> </div>
         </section>
