--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
     </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is_hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal_close_btn" data-modal-close>
                 <svg class="icon_close">
