--- a/portfolio.html
+++ b/portfolio.html
@@ -184,7 +184,7 @@
                         <p class="galerie_cover_text"> Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все
                             это позволит посетителю получить
                             исчерпывающие сведения о компании или частном лице.</p>
-                        </div>-
+                        </div>
                     <div class="text_card">
                     <h2 class="galerie_title">Growing Business</h2>
                     <p class="galerie_text" >Приложение</p></div> </a>
